feat: synchronize price lists before products